--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,10 +2,11 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Attach to C# Functions",
-      "type": "clr",
+      "name": "Attach to JavaScript Functions",
+      "type": "node",
       "request": "attach",
-      "processId": "${command:azureFunctions.pickProcess}"
+      "port": 5858,
+      "preLaunchTask": "runFunctionsHost"
     }
   ]
 }
