--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,12 @@
 {
-  "azureFunctions.projectRuntime": "~1",
-  "azureFunctions.projectLanguage": "C#",
+  "azureFunctions.projectRuntime": "~2",
+  "azureFunctions.projectLanguage": "JavaScript",
   "azureFunctions.templateFilter": "Verified",
-  "azureFunctions.deploySubpath": "bin/Release/net461/publish",
-  "azureFunctions.preDeployTask": "publish",
+  "azureFunctions.deploySubpath": ".",
+  "azureFunctions.preDeployTask": "installExtensions",
+  "files.exclude": {
+    "obj": true,
+    "bin": true
+  },
   "debug.internalConsoleOptions": "neverOpen"
 }
